--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href-catbox="䈎面圖標：msg_error" type="image/x-icon">
 	<link href="./css/功能.css" rel="stylesheet" type="text/css" media="all">
 	<link href="./css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
-	<link href="./css/not_found.css" rel="stylesheet" type="text/css" media="all">
+	<link href="./css/404.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body class="unselectable">
