--- a/日誌.html
+++ b/日誌.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="height=device-height, initial-scale=1.0">
 	<script src="./javascript/好多函數！.js"></script>
 	<script src="./javascript/橫向捲動.js"></script>
+	<script src="./javascript/日誌.js"></script>
 	<link rel="icon" href-catbox="䈎面圖標：event_log" type="image/x-icon">
 	<link href="./css/功能.css" rel="stylesheet" type="text/css" media="all">
 	<link href="./css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
