--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>The web site of soizo</title>
+	<title>SOIZO</title>
 	<script src="./javascript/好多函數！.js"></script>
 	<script src="./javascript/橫向捲動.js"></script>
 	<link href="./css/功能.css" rel="stylesheet" type="text/css" media="all">
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-	<!-- <img src-catbox="法顯東石謔諧然"></img> -->
+	<img src="assets/IMG_9503.png"></img>
 
 </body>
 
-</html>
+</html> 
