路徑啥的吧，還有嘗試字體

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SOIZO</title>
-	<script src="./javascript/好多函數！.js"></script>
-	<script src="./javascript/橫向捲動.js"></script>
-	<link href="./css/功能.css" rel="stylesheet" type="text/css" media="all">
-	<link href="./css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
-	<link href="./css/index.css" rel="stylesheet" type="text/css" media="all">
+	<script src="/javascript/好多函數！.js"></script>
+	<script src="/javascript/橫向捲動.js"></script>
+	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/index.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
-	<img src="assets/IMG_9503.png"></img>
+	<!-- <img src="assets/IMG_9503.png"></img> -->
 
 </body>
 
