--- a/日誌.html
+++ b/日誌.html
@@ -5,13 +5,13 @@
 	<title>日誌</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="height=device-height, initial-scale=1.0">
-	<script src="./javascript/好多函數！.js"></script>
-	<script src="./javascript/橫向捲動.js"></script>
-	<script src="./javascript/日誌.js"></script>
+	<script src="/javascript/好多函數！.js"></script>
+	<script src="/javascript/橫向捲動.js"></script>
+	<script src="/javascript/日誌.js"></script>
 	<link rel="icon" href-catbox="䈎面圖標：event_log" type="image/x-icon">
-	<link href="./css/功能.css" rel="stylesheet" type="text/css" media="all">
-	<link href="./css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
-	<link href="./css/日誌.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/日誌.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body class="prompt-list-group-content">
@@ -29,7 +29,7 @@
 	</script>
 
 	<div id="日誌內容">
-		<script src="./javascript/日誌/処理文本.js">
+		<script src="/javascript/日誌/処理文本.js">
 		</script>
 	</div>
 </body>
