--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>尋无</title>
-	<script src="./javascript/好多函數！.js"></script>
+	<script src="/javascript/好多函數！.js"></script>
 	<link rel="icon" href-catbox="䈎面圖標：msg_error" type="image/x-icon">
-	<link href="./css/功能.css" rel="stylesheet" type="text/css" media="all">
-	<link href="./css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
-	<link href="./css/404.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/404.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body class="unselectable">
