--- a/我的圖冊.html
+++ b/我的圖冊.html
@@ -5,12 +5,12 @@
 	<title>我的圖冊</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="height=device-height, initial-scale=1.0">
-	<script src="./javascript/好多函數！.js"></script>
-	<script src="./javascript/橫向捲動.js"></script>
+	<script src="/javascript/好多函數！.js"></script>
+	<script src="/javascript/橫向捲動.js"></script>
 	<link rel="icon" href-catbox="䈎面圖標：directory_pictures" type="image/x-icon">
-	<link href="./css/滾動條/功能.css" rel="stylesheet" type="text/css" media="all">
-	<link href="./css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
-	<link href="./css/我的圖冊.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/滾動條/功能.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/css/我的圖冊.css" rel="stylesheet" type="text/css" media="all">
 
 	</script>
 </head>
@@ -18,8 +18,8 @@
 <body class="prompt-list-group-content">
 	<!-- <div id= "友情鏈結">貓盒</div> -->
 	<div id="全部圖片" class="unselectable">
-		<script src="./javascript/我的圖冊/按鈕.js"></script>
-		<script src="./javascript/我的圖冊/我的圖冊.js"></script>
+		<script src="/javascript/我的圖冊/按鈕.js"></script>
+		<script src="/javascript/我的圖冊/我的圖冊.js"></script>
 	</div>
 
 </body>
