--- a/日誌.html
+++ b/日誌.html
@@ -9,6 +9,7 @@
 	<script src="/javascript/橫向捲動.js"></script>
 	<script src="/javascript/日誌/日誌.js"></script>
 	<link rel="icon" href-catbox="䈎面圖標：event_log" type="image/x-icon">
+	<link rel="preload" href="/fonts/閹割unifont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/css/日誌.css" rel="stylesheet" type="text/css" media="all">
