细节什么的

--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 </head>
 
 <body class="unselectable">
-	<h1>尋无</h1>
+	<b class="大">尋无</b>
 	<br>
-	<p>所求䈎尋无</p>
+	<div class="中">NOT-FOUND<a class="中" href="/" target="_blank">主䈎</a></div>
 </body>
 
 </html>
