--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
 	<title>尋无</title>
 	<script src="/javascript/好多函數！.js"></script>
 	<link rel="icon" href-catbox="䈎面圖標：msg_error" type="image/x-icon">
+	<link rel="preload" href="/fonts/所求䈎尋无HanaMin.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/css/404.css" rel="stylesheet" type="text/css" media="all">
