--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="unselectable">
-	<b class="大">尋无</b>
+	<div class="大">尋无</div>
 	<br>
 	<div class="中">NOT-FOUND<a class="中" href="/" target="_blank">主䈎</a></div>
 </body>
