日志和404 我还去整治neocities的后事了

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 <body class="unselectable">
 	<div class="大">尋无</div>
 	<br>
-	<div class="中">NOT-FOUND<a class="中" href="/" target="_blank">主䈎</a></div>
+	<div class="中">NOT-FOUND<a class="中" href="/">主䈎</a></div>
 </body>
 
 </html>
