很多，一塊提交吧

--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 </head>
 
 <body>
-	<!-- <img src="assets/IMG_9503.png"></img> -->
-	<!-- <iframe class="聊天" src="https://www3.cbox.ws/box/?boxid=3536540&boxtag=soizo" width="" height="450"
-		allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0"
-		scrolling="auto"></iframe> -->
-
+	<center><img id="文者燒殺人" class="unselectable" src-catbox="文者燒殺人" draggable="false"></img></center>
+	<div>撒反對啊手動閥手動閥手動閥撒旦發射點士大夫</div>
 </body>
 
 </html>
