--- a/日誌.html
+++ b/日誌.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="prompt-list-group-content">
-	<a href="#" class="複製今日道曆 unselectable" tabindex="0">複製今日道曆</a>
+	<a href="#" class="複製今日道曆 unselectable" tabindex="0" draggable="false">複製今日道曆</a>
 	<script>
 		document.querySelectorAll('.複製今日道曆').forEach(link => {
 			link.addEventListener('click', async function (event) {
