不知道說什麼

--- a/index.html
+++ b/index.html
@@ -7,14 +7,45 @@
 	<title>SOIZO</title>
 	<script src="/javascript/好多函數！.js"></script>
 	<script src="/javascript/橫向捲動.js"></script>
+	<script src="/javascript/index/index.js"></script>
+	<link rel="preload" href="/fonts/閹割unifont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+	<link rel="preload" href="/fonts/只需HanaMinA.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/css/index.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
-<body>
-	<center><img id="文者燒殺人" class="unselectable" src-catbox="文者燒殺人" draggable="false"></img></center>
-	<div>撒反對啊手動閥手動閥手動閥撒旦發射點士大夫</div>
+<body class="prompt-list-group-content">
+	<center><a href="" draggable="false"><img id="文者燒殺人" class="unselectable" src-catbox="文者燒殺人" draggable="false"></a>
+	</center>
+	<table>
+		<tbody>
+			<tr>
+				<td id="上列">
+					<div class="塊" id="个人紹介">
+						<img src="/assets/圖像/赤景靑面怒視目.jpg" id="頁貼">
+						<h2>石顯法東</h2>
+						<p>是我的网絡昵稱。</p>
+						<p>這裏是我的个人网站</p>
+						</br>
+						<div>事實我早些時就啓始了<span class="遮擋下">但非index</span></div>
+						<p>我仍決定卽日卽烏:=今$0=:乍</p>
+						<li>asdf </li>
+					</div>
+				</td>
+				<td id="下列">
+					<div class="塊">
+						日杘灾晵杘灾
+						米尸土木尸灶
+						木小場地灶杘灶小木屋杘灶
+						杘灶小木屋杘
+						杰尸土杘灶尸杰
+						杘小地方灶
+					</div>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 
 </html>
