--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="height=device-height, initial-scale=1.0">
 	<title>尋无</title>
 	<script src="/javascript/好多函數！.js"></script>
 	<link rel="icon" href-catbox="䈎面圖標：msg_error" type="image/x-icon">
