--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="height=device-height, initial-scale=1.0">
 	<title>SOIZO</title>
 	<script src="/javascript/好多函數！.js"></script>
 	<script src="/javascript/橫向捲動.js"></script>
