Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   404.html
	renamed:    "assets/\345\234\226\345\203\217/IMG_9503.png" -> "assets/\345\234\226\350\261\241/IMG_9503.png"
	renamed:    "assets/\345\234\226\345\203\217/\346\226\207\350\200\205\347\207\222\346\256\272\344\272\272-\346\234\211\346\241\206-\346\212\240\344\270\213-00ff80.png" -> "assets/\345\234\226\350\261\241/\346\226\207\350\200\205\347\207\222\346\256\272\344\272\272-\346\234\211\346\241\206-\346\212\240\344\270\213-00ff80.png"
	renamed:    "assets/\345\234\226\345\203\217/\346\263\211\346\254\241\346\226\271\351\226\211\347\234\274\346\234\235\345\217\263\351\243\237\346\214\207\345\220\221\344\270\212.png" -> "assets/\345\234\226\350\261\241/\346\263\211\346\254\241\346\226\271\351\226\211\347\234\274\346\234\235\345\217\263\351\243\237\346\214\207\345\220\221\344\270\212.png"
	renamed:    "assets/\345\234\226\345\203\217/\346\263\225\351\241\257\346\235\261\347\237\263\350\254\224\350\253\247\347\204\266.jpg" -> "assets/\345\234\226\350\261\241/\346\263\225\351\241\257\346\235\261\347\237\263\350\254\224\350\253\247\347\204\266.jpg"
	renamed:    "assets/\345\234\226\345\203\217/\350\265\244\346\231\257\351\235\221\351\235\242\346\200\222\350\246\226\347\233\256.jpg" -> "assets/\345\234\226\350\261\241/\350\265\244\346\231\257\351\235\221\351\235\242\346\200\222\350\246\226\347\233\256.jpg"
	modified:   css/index.css
	modified:   "fonts/\345\217\252\351\234\200HanaMinA.ttf"
	modified:   "fonts/\345\217\252\351\234\200HanaMinA.txt"
	modified:   index.html
	modified:   javascript/index/index.js
	renamed:    "javascript/\345\245\275\345\244\232\345\207\275\346\225\270\357\274\201.js" -> "javascript/\345\205\254\345\205\261/\345\245\275\345\244\232\345\207\275\346\225\270\357\274\201.js"
	renamed:    "javascript/\346\251\253\3

--- a/我的圖冊.html
+++ b/我的圖冊.html
@@ -5,9 +5,9 @@
 	<title>我的圖冊</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="height=device-height, initial-scale=1.0">
-	<script src="/javascript/好多函數！.js"></script>
-	<script src="/javascript/橫向捲動.js"></script>
-	<link rel="icon" href-catbox="䈎面圖標：directory_pictures" type="image/x-icon">
+	<script src="/javascript/公共/好多函數！.js"></script>
+	<script src="/javascript/公共/橫向捲動.js"></script>
+	<link rel="icon" s-href="䈎面圖標：directory_pictures" type="image/x-icon">
 	<link href="/css/滾動條/功能.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/css/我的圖冊.css" rel="stylesheet" type="text/css" media="all">
