--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="height=device-height, initial-scale=1.0">
 	<title>尋无</title>
-	<script src="/javascript/好多函數！.js"></script>
-	<link rel="icon" href-catbox="䈎面圖標：msg_error" type="image/x-icon">
+	<script src="/javascript/公共/好多函數！.js"></script>
+	<link rel="icon" s-href="䈎面圖標：msg_error" type="image/x-icon">
 	<link rel="preload" href="/fonts/只需HanaMinA.ttf" as="font" type="font/woff2" crossorigin="anonymous">
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
