--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="height=device-height, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SOIZO</title>
-	<script src="/javascript/好多函數！.js"></script>
-	<script src="/javascript/橫向捲動.js"></script>
+	<script src="/javascript/公共/好多函數！.js"></script>
+	<script src="/javascript/公共/橫向捲動.js"></script>
 	<script src="/javascript/index/index.js"></script>
+	<script src="/javascript/公共/私用字.js"></script>
 	<link rel="preload" href="/fonts/閹割unifont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 	<link rel="preload" href="/fonts/只需HanaMinA.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all">
@@ -16,29 +17,33 @@
 </head>
 
 <body class="prompt-list-group-content">
-	<center><a href="" draggable="false"><img id="文者燒殺人" class="unselectable" src-catbox="文者燒殺人" draggable="false"></a>
+	<center><a href="" draggable="false"><img id="文者燒殺人" class="unselectable" s-src="文者燒殺人" draggable="false"></a>
 	</center>
 	<table>
 		<tbody>
 			<tr>
 				<td id="上列">
 					<div class="塊" id="个人紹介">
-						<img src="/assets/圖像/赤景靑面怒視目.jpg" id="頁貼">
+						<img s-src="赤景靑面怒視目" id="頁貼">
 						<h2>石顯法東</h2>
+						</br>
+						</br>
 						<p>是我的网絡昵稱。</p>
 						<p>這裏是我的个人网站</p>
 						</br>
-						<div>事實我早些時就啓始了<span class="遮擋下">但非index</span></div>
+						<div>事實我早些時就啓始了<span class="遮擋下" style="background-color: #000;">但非index</span></div>
 						<p>我仍決定卽日卽:=今$0=:乍爲啓始日：</p>
 						<b>四七二〇年二月十七戌正一刻</b>
 						</br>
 						</br>
-						<h3>石顯法東</h3>
+						</br>
+						<h3 style="text-decoration: underline;">相關我</h3>
+						<p></p>
 					</div>
 				</td>
 				<td id="下列">
-					<div class="塊">
-						日杘灾晵杘灾
+					<div class="塊" id="Q1">
+						日<span class="遮擋下">但非index</span>
 						米尸土木尸灶
 						木小場地灶杘灶小木屋杘灶
 						杘灶小木屋杘
