--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="/javascript/公共/橫向捲動.js"></script>
 	<script src="/javascript/index/index.js"></script>
 	<script src="/javascript/公共/私用字.js"></script>
+	<script src="/javascript/公共/符號.js"></script>
 	<link rel="preload" href="/json/公共/私用字辭典.json" as="fetch" type="application/json">
 	<link rel="preload" href="/fonts/閹割unifont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 	<link rel="preload" href="/fonts/只需HanaMinA.ttf" as="font" type="font/ttf" crossorigin="anonymous">
@@ -26,29 +27,30 @@
 				<td id="上列">
 					<div class="塊" id="个人紹介">
 						<img s-src="赤景靑面怒視目" id="頁貼" class="unselectable">
-						<inline>
-							<h2 style="margin-left: 60px;">
-								<span>石顯法東</span>
-							</h2>
-						</inline>
+						<h2 style="margin-left: 60px;">
+							石顯法東
+						</h2>
 						<p>是我的网絡昵稱。</p>
 						<p>這裏是我的个人网站</p>
-						</br>
-						<div>事實我早些時就啓始了<span class="遮擋下" style="background-color: #000;">但非index</span></div>
+						<span class="遮擋下" style="background-color: #000;">事實我早些時就啓始了</br>（但非index）</span>
 						<p>我仍決定卽日卽:=今$0=:乍爲啓始日：</p>
 						<b>四七二〇年二月十七戌正一刻</b>
-						</br>
-						</br>
-						</br>
-						<h3 style="text-decoration: underline;">相關我</h3>
-						<div id="相關我列表">
-							<li>我</li>
-							<li></li>
-						</div>
+						<h3 style="text-decoration: underline; padding-right: 30px;">相關我</h3>
+						<ul id="相關我列表">
+							<li>:=&CHINA-FLAG=: 我是<a href="/wiki/中國.html/" target="_blank" class="「中國」">中國</a>人</li>
+							<li>:=&CODE=: 編程語言
+								<ul>
+									<li>我最早接觸的是<a href="https://scratch.mit.edu/" target="_blank">SCRATCH</a> DESKTOP
+									</li>
+									<li>s </li>
+								</ul>
+							</li>
+						</ul>
+					</div>
 				</td>
 				<td id="下列">
 					<div class="塊" id="Q1">
-						日<span class="遮擋下">但非index</span>
+						<!-- 日<span class="遮擋下">但非index</span>
 						我是
 						<p>蘿莉:=控$1=:
 						<p>
@@ -56,7 +58,7 @@
 							木小場地灶杘灶小木屋杘灶
 							杘灶小木屋杘
 							杰尸土杘灶尸杰
-							杘小地方灶
+							杘小地方灶 -->
 					</div>
 				</td>
 			</tr>
