--- a/日誌.html
+++ b/日誌.html
@@ -8,6 +8,8 @@
 	<script src="/javascript/公共/好多函數！.js"></script>
 	<script src="/javascript/公共/橫向捲動.js"></script>
 	<script src="/javascript/日誌/日誌.js"></script>
+	<script src="/javascript/公共/豎排符號.js"></script>
+	<script src="/javascript/公共/絵文字.js"></script>
 	<link rel="icon" s-href="䈎面圖標：event_log" type="image/x-icon">
 	<link rel="preload" href="/fonts/閹割unifont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all">
