--- a/index.html
+++ b/index.html
@@ -38,16 +38,34 @@
 						<span class="遮擋下" style="background-color: #000;">事實我早些時就啓始了</br>（但非index）</span>
 						<p>我仍決定卽日卽:=今$0=:乍爲啓始日：</p>
 						<b class="時間">四七二〇年二月十七戌正一刻</b>
-						<h3 style="text-decoration: underline; padding-right: 30px;">相關我</h3>
-						<ul id="相關我列表">
-							<li>我是<b><a href="/wiki/中國.html/" target="_blank" class="「中國」">中國</a></b> :=&CHINA-FLAG=: 人
+						<h3 style="text-decoration: underline; padding-right: 30px;">
+							關於我
+						</h3>
+						<ul id="相關我列表" style="padding-right: 20px;">
+							<li>我是
+								<b>
+									<a href="/wiki/中國.html/" target="_blank" class="「中國」">
+										中國
+									</a>
+								</b>
+								:=&CHINA-FLAG=: 人
 							</li>
-							<li><b>編程語言 :=&CODE=:</b> 學得很雜，譬如<a href="https://scratch.mit.edu/download"
-									target="_blank">SCRATCH</a>, <a>C++</a>, <a>GDscript</a> 都學過（或學校或自學） 其餘主流語言都有了解或可讀
-							</li>
-							<li>生辰 :=&BIRTH=: <i class="時間">四七〇五八月初九</i></li>
-							<li>性別 :=&GENDER=: 男，性取向不明確</li>
+							<li><b>生辰</b>：<i class="時間">四七〇五八月初九</i></li>
+							<li>男　性取向不明確</li>
 
+							<li><b>編程語言 :=&CODE=:</br>
+								</b>
+								學得很雜　譬如
+								<a href="https://scratch.mit.edu/download" target="_blank">
+									SCRATCH
+								</a>, <a>C++</a>, <a>GDscript</a> 都學過（或學校或自學） 其餘主流語言都有了解或可讀
+							</li>
+							<li>
+								<b>愛好 :=&心=:</b><br>
+								<ul>
+									<li><b>漢字</b>	來自世界的漢字：中國日本韓國漢字　越南𡨸喃　西夏𗼇𘝞 女真&#xf0700;&#xf0701;&#xf0702;</li>
+								</ul>
+							</li>
 						</ul>
 					</div>
 				</td>
