Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<li>
 								<b>愛好 :=&心=:</b><br>
 								<ul>
-									<li><b>漢字</b>	來自世界的漢字：中國日本韓國漢字　越南𡨸喃　西夏𗼇𘝞 女真&#xf0700;&#xf0701;&#xf0702;</li>
+									<li><b>漢字</b> 來自世界的漢字：中國日本韓國漢字　㗂越𡨸喃　𗼇𘝞　以及&#xf0700;&#xf0701;&#xf0702;</li>
 								</ul>
 							</li>
 						</ul>
@@ -71,15 +71,6 @@
 				</td>
 				<td id="下列">
 					<div class="塊" id="Q1">
-						<!-- 日<span class="遮擋下">但非index</span>
-						我是
-						<p>蘿莉:=控$1=:
-						<p>
-							米尸土木尸灶
-							木小場地灶杘灶小木屋杘灶
-							杘灶小木屋杘
-							杰尸土杘灶尸杰
-							杘小地方灶 -->
 					</div>
 				</td>
 			</tr>
