--- a/index.html
+++ b/index.html
@@ -35,30 +35,24 @@
 						<hr style="margin-left: 50px; margin-right: 10px;">
 						<p>是我的网絡昵稱。</p>
 						<p>這裏是我的个人网站</p>
-						<span class="遮擋下" style="background-color: #000;">事實我早些時就啓始了</br>（但非index）</span>
+						<span class="遮擋下" style="background-color: #000;">事實我早些時就啓始了</br>（但非<span
+								lang="en">index</span>）</span>
 						<p>我仍決定卽日卽:=今$0=:乍爲啓始日：</p>
 						<b class="時間">四七二〇年二月十七戌正一刻</b>
 						<h3 style="text-decoration: underline; padding-right: 30px;">
 							關於我
 						</h3>
 						<ul id="相關我列表" style="padding-right: 20px;">
-							<li>我是
-								<b>
-									<a href="/wiki/中國.html/" target="_blank" class="「中國」">
-										中國
-									</a>
-								</b>
-								:=&CHINA-FLAG=: 人
+							<li>我是<b><a href="/wiki/中國.html/" target="_blank" class="「中國」">中國</a></b>:=&CHINA-FLAG=: 人
 							</li>
 							<li><b>生辰</b>：<i class="時間">四七〇五八月初九</i></li>
 							<li>男　性取向不明確</li>
-
 							<li><b>編程語言 :=&CODE=:</br>
 								</b>
-								學得很雜　譬如
-								<a href="https://scratch.mit.edu/download" target="_blank">
-									SCRATCH
-								</a>, <a>C++</a>, <a>GDscript</a> 都學過（或學校或自學） 其餘主流語言都有了解或可讀
+								學得很雜　譬如<a href="https://scratch.mit.edu/download" target="_blank"
+									lang="en">SCRATCH</a><span lang="en">, </span><a lang="en">C++</a><span lang="en">,
+								</span>
+								<a lang="en">GDscript</a>都學過（或學校或自學） 其餘主流語言都有了解或可讀
 							</li>
 							<li>
 								<b>愛好 :=&心=:</b><br>
