Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   css/index.css
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 						<hr style="margin-left: 50px; margin-right: 10px;">
 						<p>是我的网絡昵稱。</p>
 						<p>這裏是我的个人网站</p>
-						<span class="遮擋下" style="background-color: #000;">事實我早些時就啓始了</br>（但非<span
-								lang="en">index</span>）</span>
+						<span class="遮擋下" style="background-color: #000;">事實我早些時就啓始了</br>（但非index）</span>
 						<p>我仍決定卽日卽:=今$0=:乍爲啓始日：</p>
 						<b class="時間">四七二〇年二月十七戌正一刻</b>
 						<h3 style="text-decoration: underline; padding-right: 30px;">
@@ -49,15 +48,14 @@
 							<li>男　性取向不明確</li>
 							<li><b>編程語言 :=&CODE=:</br>
 								</b>
-								學得很雜　譬如<a href="https://scratch.mit.edu/download" target="_blank"
-									lang="en">SCRATCH</a><span lang="en">, </span><a lang="en">C++</a><span lang="en">,
-								</span>
-								<a lang="en">GDscript</a>都學過（或學校或自學） 其餘主流語言都有了解或可讀
+								學得很雜　譬如<a href="https://scratch.mit.edu/download" target="_blank">SCRATCH</a>,
+								<a>C++</a>, <a>GDscript</a>都學過（或學校或自學） 其餘主流語言都有了解或可讀
 							</li>
 							<li>
 								<b>愛好 :=&心=:</b><br>
 								<ul>
-									<li><b>漢字</b> 來自世界的漢字：中國日本韓國漢字　㗂越𡨸喃　𗼇𘝞　以及&#xf0700;&#xf0701;&#xf0702;</li>
+									<li><b>漢字</b> 來自世界的漢字：中國日本韓國漢字　㗂越𡨸喃　<span lang="han-char">𗼇𘝞</span>　以及<span
+											lang="han-char">&#xf0700;&#xf0701;&#xf0702;</span></li>
 								</ul>
 							</li>
 						</ul>
