Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 							<li>男　性取向不明確</li>
 							<li><b>編程語言 :=&CODE=:</br>
 								</b>
-								學得很雜　譬如<a href="https://scratch.mit.edu/download" target="_blank">SCRATCH</a>,
-								<a>C++</a>, <a>GDscript</a>都學過（或學校或自學） 其餘主流語言都有了解或可讀
+								學得很雜　譬如<a href="https://scratch.mit.edu/download" target="_blank">SCRATCH</a><span>,
+								</span><a>C++</a>, <a>GDscript</a>都學過（或學校或自學） 其餘主流語言都有了解或可讀
 							</li>
 							<li>
 								<b>愛好 :=&心=:</b><br>
