--- a/wiki.html
+++ b/wiki.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>SOIZO wiki</title>
-    <script src="javascript/公共/好多函數！.js"></script>
-    <script src="javascript/公共/橫向捲動.js"></script>
-    <script src="javascript/公共/私用字.js"></script>
-    <script src="javascript/公共/絵文字.js"></script>
-    <script src="javascript/公共/豎排符號.js"></script>
-    <script src="javascript/公共/showdown.min.js"></script>
-    <link
-      rel="preload"
-      href="/fonts/閹割unifont-Medium.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
-    <link href="/css/wiki.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="/css/功能.css" rel="stylesheet" type="text/css" media="all" />
-  </head>
-  <body>
-    <div id="content" alt="這裡會顯示Markdown內容、頁面列表或錯誤消息"></div>
-    <script src="/javascript/wiki/wiki.js"></script>
-  </body>
+    <head>
+        <title>SOIZO wiki</title>
+        <script src="/javascript/公共/好多函數！.js"></script>
+        <script src="/javascript/公共/橫向捲動.js"></script>
+        <script src="/javascript/公共/私用字.js"></script>
+        <script src="/javascript/公共/絵文字.js"></script>
+        <script src="/javascript/公共/豎排符號.js"></script>
+        <script src="/showdown/dist/showdown.js"></script>
+        <link
+            rel="preload"
+            href="/fonts/閹割unifont-Medium.woff2"
+            as="font"
+            type="font/woff2"
+            crossorigin="anonymous"
+        />
+        <link
+            href="/css/wiki.css"
+            rel="stylesheet"
+            type="text/css"
+            media="all"
+        />
+        <link
+            href="/css/功能.css"
+            rel="stylesheet"
+            type="text/css"
+            media="all"
+        />
+    </head>
+    <body>
+        <div
+            id="content"
+            alt="這裡會顯示Markdown內容、頁面列表或錯誤消息"
+        ></div>
+        <script src="/javascript/wiki/wiki.js"></script>
+    </body>
 </html>
