Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   css/index.css
	modified:   "fonts/\351\226\271\345\211\262unifont-Medium.woff2"
	modified:   index.html
	modified:   "javascript/\345\205\254\345\205\261/\345\245\275\345\244\232\345\207\275\346\225\270\357\274\201.js"
	modified:   "javascript/\345\205\254\345\205\261/\347\247\201\347\224\250\345\255\227.js"
	modified:   wiki.html

--- a/wiki.html
+++ b/wiki.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta
+            name="viewport"
+            content="height=device-height, initial-scale=0.9"
+        />
         <title>SOIZO wiki</title>
         <script src="/javascript/公共/好多函數！.js"></script>
         <script src="/javascript/公共/橫向捲動.js"></script>
