Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   "assets/\344\210\216\351\235\242\345\234\226\346\250\231/wiki/red.svg"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/BIRTH.gif"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/CHINA-FLAG.gif"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/CODE.gif"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/GENDER.gif"
	new file:   "assets/\347\265\265\346\226\207\345\255\227/WIKI.png"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/\345\242\250\351\217\241.gif"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/\345\277\203.gif"
	modified:   css/index.css
	modified:   css/wiki.css
	modified:   index.html
	modified:   javascript/wiki/wiki.js
	modified:   "javascript/\345\205\254\345\205\261/\347\247\201\347\224\250\345\255\227.js"
	modified:   "json/wiki/wiki\347\233\256\351\214\204.json"
	modified:   wiki.html
	new file:   "wiki/\345\214\243\346\261\241\347\263\273.md"
	new file:   "wiki/\345\226\256\345\255\227/\360\254\202\244.md"
	new file:   "wiki/\345\226\256\350\251\236/\363\260\234\200\363\260\234\201\363\260\234\202.md"

--- a/index.html
+++ b/index.html
@@ -83,14 +83,7 @@
                             >
                             <p>我仍決定卽日卽:=今$0=:乍爲啓始日：</p>
                             <b class="時間">四七二〇年二月十七戌正一刻</b>
-                            <h3
-                                style="
-                                    text-decoration: underline;
-                                    padding-right: 30px;
-                                "
-                            >
-                                關於我
-                            </h3>
+                            <h3>關於我</h3>
                             <ul id="相關我列表" style="padding-right: 20px">
                                 <li>
                                     我是<b
@@ -129,15 +122,15 @@
                             </ul>
                         </div>
                         <div class="塊" id="愛好">
-                            <h2>愛好 :=&心=:</h2>
+                            <h3>愛好 :=&心=:</h3>
                             <ul>
                                 <li>
-									<b>吸</b>
+                                    <b>吸</b>
                                     <b>漢字</b
                                     >　來自世界的漢字：中國日本韓國漢字　<br />㗂越𡨸喃　<span
                                         lang="han-char"
                                         >𗼇𘝞</span
-                                    >　以及女真<span lang="han-char"
+                                    >　以及<span lang="han-char"
                                         >&#xf0700;&#xf0701;&#xf0702;</span
                                     >
                                     <p>恩其實主要是前面純漢字吧（笑）</p>
