--- a/wiki.html
+++ b/wiki.html
@@ -31,39 +31,16 @@
             type="text/css"
             media="all"
         />
+        <link
+            href="/css/滾動條/黑灰白滾動條.css"
+            rel="stylesheet"
+            type="text/css"
+            media="all"
+        />
+        <link rel="icon" href="/assets/絵文字/WIKI.png" type="image/x-icon" />
     </head>
     <body>
-        <div id="content" alt="這裡會顯示Markdown內容、頁面列表或錯誤消息">
-            <div id="䈎彙外">
-                <div id="䈎彙">
-                    <h2>全部　ＷＩＫＩ</h2>
-                    <table>
-                        <tr>
-                            <th>國家</th>
-                            <th>論</th>
-                        </tr>
-                        <tr>
-                            <td>
-                                :=&CHINA-FLAG=:<a
-                                    class="「中國」"
-                                    href="?title=中國"
-                                    >中國</a
-                                >
-                            </td>
-                            <td>
-                                :=&GENDER=:<a href="?title=性別四元論"
-                                    >性別四元論</a
-                                >
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <script>
-                window.全HTML絵文字替換();
-                window.全HTML豎排符號替換();
-            </script>
-        </div>
+        <div id="content"></div>
         <script src="/javascript/wiki/wiki.js"></script>
     </body>
 </html>
