Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   css/wiki.css
	new file:   "css/\350\210\212wiki.css"
	modified:   javascript/wiki/wiki.js
	modified:   "json/wiki/wiki\347\233\256\351\214\204.json"
	modified:   wiki.html

別的和修復wiki䈎彙無法捲動

--- a/wiki.html
+++ b/wiki.html
@@ -37,9 +37,23 @@
             type="text/css"
             media="all"
         />
+        <script>
+            function changeCSSVariables(variables) {
+                Object.keys(variables).forEach(function (key) {
+                    document.documentElement.style.setProperty(
+                        key,
+                        variables[key]
+                    );
+                });
+            }
+            changeCSSVariables({
+                "--滾動條：背景色": "#1c1f24",
+                "--滾動條：三角背景色": "#1c1f24",
+            });
+        </script>
         <link rel="icon" href="/assets/絵文字/WIKI.png" type="image/x-icon" />
     </head>
-    <body>
+    <body class="prompt-list-group-content">
         <div id="content"></div>
         <script src="/javascript/wiki/wiki.js"></script>
     </body>
