Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   css/wiki.css
	modified:   wiki.html

再次修復wiki捲動問題

--- a/wiki.html
+++ b/wiki.html
@@ -49,6 +49,7 @@
             changeCSSVariables({
                 "--滾動條：背景色": "#1c1f24",
                 "--滾動條：三角背景色": "#1c1f24",
+                "--滾動條：交界背景色": "#1c1f24",
             });
         </script>
         <link rel="icon" href="/assets/絵文字/WIKI.png" type="image/x-icon" />
