Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   css/index.css
	modified:   css/wiki.css
	modified:   index.html
	modified:   javascript/index/index.js
	modified:   javascript/wiki/wiki.js
	modified:   "javascript/\345\205\254\345\205\261/\345\245\275\345\244\232\345\207\275\346\225\270\357\274\201.js"

--- a/index.html
+++ b/index.html
@@ -165,5 +165,8 @@
                 </tr>
             </tbody>
         </table>
+        <script>
+            window.addMobileWarning();
+        </script>
     </body>
 </html>
